fix header bg on mobile

--- a/src/blocks/header/_header.scss
+++ b/src/blocks/header/_header.scss
@@ -6,6 +6,7 @@
 		flex-direction: column;
 		height: 540px;
 		justify-content: flex-start;
+		margin-bottom: 40px;
 		.promo {
 				display: flex;
 				align-items: center;
@@ -18,6 +19,7 @@
 		flex-direction: column;
 		height: 700px;
 		justify-content: flex-start;
+		margin-bottom: 100px;
 		.promo {
 				display: flex;
 				align-items: center;
@@ -31,6 +33,7 @@
 		flex-direction: column;
 		height: 700px;
 		justify-content: flex-start;
+		margin-bottom: 100px;
 		.promo {
 				display: flex;
 				align-items: center;
